# infortainment

./: README.md
project/infortainment/: Bottom.qml  CMakeLists.txt  CMakeLists.txt.user.4e1d361  IconButton.qml  Left.qml  Main.qml  audio.cpp  audio.h  controller.cpp  controller.h  main.cpp  system.cpp  system.h  wheather.cpp  wheather.h
test/panel/: CMakeLists.txt  main.cpp
